<resources>
    <string name="app_name">MP3Player</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="_0_00">0:00</string>
    <string name="_0_00_">0:00</string>
    <string name="_00_00">00:00</string>
    <string name="_00_00_">00:00</string>
    <string name="_0_00__">0:00</string>
    <string name="_0_0_0">0:00</string>
</resources>